@@ -15,8 +15,10 @@ Version 0.3n
  - Win: Fuck males (dominant).
 * Added partial repeat date scenes for Miranda (mostly talk atm).
 * Naga mob (no content yet) + Naga transformative item.
-* Added Naga TF item to Rosalin's menu.
-* Added Dog TF item to Rosalin's menu.
+* Added several TF items to Rosalin's menu:
+ - Naga TF.
+ - Dog TF.
+ - Wolf TF.
 
 --------------------------------------------
              PREVIOUS VERSIONS
